@@ -156,6 +156,13 @@ awn_gconf_new()
 	load_monitor (s);
 	s->task_width = 60;
 	
+	/* make the custom icons directory */
+	gchar *path = g_build_filename (g_get_home_dir (),
+					".awn/custom-icons",
+					NULL);
+	g_mkdir_with_parents (path, 0755);
+	g_free (path);
+	
 	return s;
 }
 
